# sound_effects_editor

./: Makefile.am  Makefile.in  NEWS  README  configure  configure.ac  sound_effects_editor-0.1.tar.bz2
example_01/: Makefile.am  Makefile.in
man/: Makefile.am  Makefile.in  sound_effects_editor.1
src/: Makefile.am  Makefile.in  sound_effects_editor  sound_effects_editor.in
