#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.67])
AC_INIT([sound_effects_editor],[0.1],[John_Sauter@systemeyescomputerstore.com])
AM_INIT_AUTOMAKE([tar-pax dist-bzip2 no-dist-gzip]) 
AC_CONFIG_SRCDIR([src/sound_effects_editor])
AM_MAINTAINER_MODE

# Checks for programs.
AM_PATH_PYTHON([3])

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

# Checks for system services.


AC_CONFIG_FILES([Makefile
                 example_01/Makefile
                 man/Makefile
                 src/Makefile])
AC_OUTPUT

