EXTRA_DIST = \
	01.wav \
	02.wav \
	03.wav \
	04.wav \
	05.wav \
	06.wav \
	07.wav \
	08.wav \
	09.wav \
	10.wav \
	11.wav \
	12.wav \
	13.wav \
	14.wav \
	15.wav \
	16.wav \
	440Hz.wav \
	Example_01_cues.xml \
	Example_01_equipment.xml \
	Example_01_project.xml \
	Example_01_script.xml \
	Example_01_sound_sequence.xml \
	Example_01_sounds.xml \
	run_example_01.sh 
